parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program function
Rule 2     program -> function
Rule 3     statement -> BEGIN statements END
Rule 4     statements -> statement
Rule 5     statements -> statements SEMI statement
Rule 6     statements -> statements statement
Rule 7     statement -> assign
Rule 8     statement -> print
Rule 9     statement -> if
Rule 10    statement -> if_else
Rule 11    statement -> while
Rule 12    statement -> BREAK
Rule 13    statement -> SKIP
Rule 14    statement -> read
Rule 15    statement -> write
Rule 16    statement -> funcall
Rule 17    statement -> return
Rule 18    locals -> locals local
Rule 19    locals -> local
Rule 20    local -> ID COLON TYPENAME SEMI
Rule 21    local -> ID COLON TYPENAME LBRACKET literal RBRACKET SEMI
Rule 22    local -> function SEMI
Rule 23    local -> ID COLON TYPENAME
Rule 24    local -> function
Rule 25    local -> ID COLON TYPENAME LBRACKET literal RBRACKET
Rule 26    function -> FUNC ID LPAREN parameters RPAREN locals BEGIN statements END
Rule 27    function -> FUNC ID LPAREN parameters RPAREN BEGIN statements END SEMI
Rule 28    function -> FUNC ID LPAREN parameters RPAREN BEGIN statements END
Rule 29    parameters -> parameters COMMA parm_declaration
Rule 30    parameters -> parm_declaration
Rule 31    parameters -> empty
Rule 32    parm_declaration -> ID COLON TYPENAME
Rule 33    parm_declaration -> ID COLON TYPENAME LBRACKET literal RBRACKET
Rule 34    if -> IF cond THEN statement
Rule 35    if_else -> IF cond THEN statement ELSE statement
Rule 36    if -> IF cond statement
Rule 37    if_else -> IF cond statement ELSE statement
Rule 38    while -> WHILE cond DO statement
Rule 39    assign -> location ASSIGN expression
Rule 40    print -> PRINT LPAREN literals RPAREN
Rule 41    write -> WRITE LPAREN expression RPAREN
Rule 42    return -> RETURN expression
Rule 43    read -> READ LPAREN location RPAREN
Rule 44    funcall -> ID LPAREN exprlist RPAREN
Rule 45    expression -> PLUS expression
Rule 46    expression -> MINUS expression
Rule 47    expression -> LPAREN expression RPAREN
Rule 48    expression -> funcall
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression TIMES expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    cond -> expression LT expression
Rule 54    cond -> expression GT expression
Rule 55    cond -> expression LE expression
Rule 56    cond -> expression GE expression
Rule 57    cond -> expression EQ expression
Rule 58    cond -> expression NE expression
Rule 59    cond -> cond LAND cond
Rule 60    cond -> cond LOR cond
Rule 61    cond -> LNOT cond
Rule 62    cond -> LPAREN cond RPAREN
Rule 63    expression -> location
Rule 64    expression -> literal
Rule 65    expression -> TYPENAME LPAREN expression RPAREN
Rule 66    exprlist -> exprlist COMMA expression
Rule 67    exprlist -> exprlist expression
Rule 68    exprlist -> expression
Rule 69    exprlist -> empty
Rule 70    literal -> INTEGER
Rule 71    literal -> FLOAT
Rule 72    literals -> STRING
Rule 73    location -> ID
Rule 74    location -> ID LBRACKET expression RBRACKET
Rule 75    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 39
BEGIN                : 3 26 27 28
BREAK                : 12
COLON                : 20 21 23 25 32 33
COMMA                : 29 66
DIVIDE               : 52
DO                   : 38
ELSE                 : 35 37
END                  : 3 26 27 28
EQ                   : 57
FLOAT                : 71
FUNC                 : 26 27 28
GE                   : 56
GT                   : 54
ID                   : 20 21 23 25 26 27 28 32 33 44 73 74
IF                   : 34 35 36 37
INTEGER              : 70
LAND                 : 59
LBRACKET             : 21 25 33 74
LE                   : 55
LNOT                 : 61
LOR                  : 60
LPAREN               : 26 27 28 40 41 43 44 47 62 65
LT                   : 53
MINUS                : 46 50
NE                   : 58
PLUS                 : 45 49
PRINT                : 40
RBRACKET             : 21 25 33 74
READ                 : 43
RETURN               : 42
RPAREN               : 26 27 28 40 41 43 44 47 62 65
SEMI                 : 5 20 21 22 27
SKIP                 : 13
STRING               : 72
THEN                 : 34 35
TIMES                : 51
TYPENAME             : 20 21 23 25 32 33 65
WHILE                : 38
WRITE                : 41
error                : 

Nonterminals, with rules where they appear

assign               : 7
cond                 : 34 35 36 37 38 59 59 60 60 61 62
empty                : 31 69
expression           : 39 41 42 45 46 47 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 65 66 67 68 74
exprlist             : 44 66 67
funcall              : 16 48
function             : 1 2 22 24
if                   : 9
if_else              : 10
literal              : 21 25 33 64
literals             : 40
local                : 18 19
locals               : 18 26
location             : 39 43 63
parameters           : 26 27 28 29
parm_declaration     : 29 30
print                : 8
program              : 1 0
read                 : 14
return               : 17
statement            : 4 5 6 34 35 35 36 37 37 38
statements           : 3 5 6 26 27 28
while                : 11
write                : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program function
    (2) program -> . function
    (26) function -> . FUNC ID LPAREN parameters RPAREN locals BEGIN statements END
    (27) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END SEMI
    (28) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END

    FUNC            shift and go to state 2

    function                       shift and go to state 1
    program                        shift and go to state 3

state 1

    (2) program -> function .

    FUNC            reduce using rule 2 (program -> function .)
    $end            reduce using rule 2 (program -> function .)


state 2

    (26) function -> FUNC . ID LPAREN parameters RPAREN locals BEGIN statements END
    (27) function -> FUNC . ID LPAREN parameters RPAREN BEGIN statements END SEMI
    (28) function -> FUNC . ID LPAREN parameters RPAREN BEGIN statements END

    ID              shift and go to state 4


state 3

    (0) S' -> program .
    (1) program -> program . function
    (26) function -> . FUNC ID LPAREN parameters RPAREN locals BEGIN statements END
    (27) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END SEMI
    (28) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END

    FUNC            shift and go to state 2

    function                       shift and go to state 5

state 4

    (26) function -> FUNC ID . LPAREN parameters RPAREN locals BEGIN statements END
    (27) function -> FUNC ID . LPAREN parameters RPAREN BEGIN statements END SEMI
    (28) function -> FUNC ID . LPAREN parameters RPAREN BEGIN statements END

    LPAREN          shift and go to state 6


state 5

    (1) program -> program function .

    FUNC            reduce using rule 1 (program -> program function .)
    $end            reduce using rule 1 (program -> program function .)


state 6

    (26) function -> FUNC ID LPAREN . parameters RPAREN locals BEGIN statements END
    (27) function -> FUNC ID LPAREN . parameters RPAREN BEGIN statements END SEMI
    (28) function -> FUNC ID LPAREN . parameters RPAREN BEGIN statements END
    (29) parameters -> . parameters COMMA parm_declaration
    (30) parameters -> . parm_declaration
    (31) parameters -> . empty
    (32) parm_declaration -> . ID COLON TYPENAME
    (33) parm_declaration -> . ID COLON TYPENAME LBRACKET literal RBRACKET
    (75) empty -> .

    ID              shift and go to state 10
    RPAREN          reduce using rule 75 (empty -> .)
    COMMA           reduce using rule 75 (empty -> .)

    parm_declaration               shift and go to state 7
    parameters                     shift and go to state 8
    empty                          shift and go to state 9

state 7

    (30) parameters -> parm_declaration .

    RPAREN          reduce using rule 30 (parameters -> parm_declaration .)
    COMMA           reduce using rule 30 (parameters -> parm_declaration .)


state 8

    (26) function -> FUNC ID LPAREN parameters . RPAREN locals BEGIN statements END
    (27) function -> FUNC ID LPAREN parameters . RPAREN BEGIN statements END SEMI
    (28) function -> FUNC ID LPAREN parameters . RPAREN BEGIN statements END
    (29) parameters -> parameters . COMMA parm_declaration

    RPAREN          shift and go to state 11
    COMMA           shift and go to state 12


state 9

    (31) parameters -> empty .

    RPAREN          reduce using rule 31 (parameters -> empty .)
    COMMA           reduce using rule 31 (parameters -> empty .)


state 10

    (32) parm_declaration -> ID . COLON TYPENAME
    (33) parm_declaration -> ID . COLON TYPENAME LBRACKET literal RBRACKET

    COLON           shift and go to state 13


state 11

    (26) function -> FUNC ID LPAREN parameters RPAREN . locals BEGIN statements END
    (27) function -> FUNC ID LPAREN parameters RPAREN . BEGIN statements END SEMI
    (28) function -> FUNC ID LPAREN parameters RPAREN . BEGIN statements END
    (18) locals -> . locals local
    (19) locals -> . local
    (20) local -> . ID COLON TYPENAME SEMI
    (21) local -> . ID COLON TYPENAME LBRACKET literal RBRACKET SEMI
    (22) local -> . function SEMI
    (23) local -> . ID COLON TYPENAME
    (24) local -> . function
    (25) local -> . ID COLON TYPENAME LBRACKET literal RBRACKET
    (26) function -> . FUNC ID LPAREN parameters RPAREN locals BEGIN statements END
    (27) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END SEMI
    (28) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END

    BEGIN           shift and go to state 15
    ID              shift and go to state 17
    FUNC            shift and go to state 2

    function                       shift and go to state 14
    local                          shift and go to state 16
    locals                         shift and go to state 18

state 12

    (29) parameters -> parameters COMMA . parm_declaration
    (32) parm_declaration -> . ID COLON TYPENAME
    (33) parm_declaration -> . ID COLON TYPENAME LBRACKET literal RBRACKET

    ID              shift and go to state 10

    parm_declaration               shift and go to state 19

state 13

    (32) parm_declaration -> ID COLON . TYPENAME
    (33) parm_declaration -> ID COLON . TYPENAME LBRACKET literal RBRACKET

    TYPENAME        shift and go to state 20


state 14

    (22) local -> function . SEMI
    (24) local -> function .

    SEMI            shift and go to state 21
    BEGIN           reduce using rule 24 (local -> function .)
    ID              reduce using rule 24 (local -> function .)
    FUNC            reduce using rule 24 (local -> function .)


state 15

    (27) function -> FUNC ID LPAREN parameters RPAREN BEGIN . statements END SEMI
    (28) function -> FUNC ID LPAREN parameters RPAREN BEGIN . statements END
    (4) statements -> . statement
    (5) statements -> . statements SEMI statement
    (6) statements -> . statements statement
    (3) statement -> . BEGIN statements END
    (7) statement -> . assign
    (8) statement -> . print
    (9) statement -> . if
    (10) statement -> . if_else
    (11) statement -> . while
    (12) statement -> . BREAK
    (13) statement -> . SKIP
    (14) statement -> . read
    (15) statement -> . write
    (16) statement -> . funcall
    (17) statement -> . return
    (39) assign -> . location ASSIGN expression
    (40) print -> . PRINT LPAREN literals RPAREN
    (34) if -> . IF cond THEN statement
    (36) if -> . IF cond statement
    (35) if_else -> . IF cond THEN statement ELSE statement
    (37) if_else -> . IF cond statement ELSE statement
    (38) while -> . WHILE cond DO statement
    (43) read -> . READ LPAREN location RPAREN
    (41) write -> . WRITE LPAREN expression RPAREN
    (44) funcall -> . ID LPAREN exprlist RPAREN
    (42) return -> . RETURN expression
    (73) location -> . ID
    (74) location -> . ID LBRACKET expression RBRACKET

    BEGIN           shift and go to state 28
    BREAK           shift and go to state 40
    SKIP            shift and go to state 35
    PRINT           shift and go to state 26
    IF              shift and go to state 38
    WHILE           shift and go to state 25
    READ            shift and go to state 23
    WRITE           shift and go to state 36
    ID              shift and go to state 37
    RETURN          shift and go to state 39

    funcall                        shift and go to state 24
    statements                     shift and go to state 22
    read                           shift and go to state 34
    return                         shift and go to state 33
    write                          shift and go to state 29
    while                          shift and go to state 41
    location                       shift and go to state 30
    statement                      shift and go to state 31
    print                          shift and go to state 32
    if_else                        shift and go to state 42
    assign                         shift and go to state 43
    if                             shift and go to state 27

state 16

    (19) locals -> local .

    BEGIN           reduce using rule 19 (locals -> local .)
    ID              reduce using rule 19 (locals -> local .)
    FUNC            reduce using rule 19 (locals -> local .)


state 17

    (20) local -> ID . COLON TYPENAME SEMI
    (21) local -> ID . COLON TYPENAME LBRACKET literal RBRACKET SEMI
    (23) local -> ID . COLON TYPENAME
    (25) local -> ID . COLON TYPENAME LBRACKET literal RBRACKET

    COLON           shift and go to state 44


state 18

    (26) function -> FUNC ID LPAREN parameters RPAREN locals . BEGIN statements END
    (18) locals -> locals . local
    (20) local -> . ID COLON TYPENAME SEMI
    (21) local -> . ID COLON TYPENAME LBRACKET literal RBRACKET SEMI
    (22) local -> . function SEMI
    (23) local -> . ID COLON TYPENAME
    (24) local -> . function
    (25) local -> . ID COLON TYPENAME LBRACKET literal RBRACKET
    (26) function -> . FUNC ID LPAREN parameters RPAREN locals BEGIN statements END
    (27) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END SEMI
    (28) function -> . FUNC ID LPAREN parameters RPAREN BEGIN statements END

    BEGIN           shift and go to state 45
    ID              shift and go to state 17
    FUNC            shift and go to state 2

    function                       shift and go to state 14
    local                          shift and go to state 46

state 19

    (29) parameters -> parameters COMMA parm_declaration .

    RPAREN          reduce using rule 29 (parameters -> parameters COMMA parm_declaration .)
    COMMA           reduce using rule 29 (parameters -> parameters COMMA parm_declaration .)


state 20

    (32) parm_declaration -> ID COLON TYPENAME .
    (33) parm_declaration -> ID COLON TYPENAME . LBRACKET literal RBRACKET

    RPAREN          reduce using rule 32 (parm_declaration -> ID COLON TYPENAME .)
    COMMA           reduce using rule 32 (parm_declaration -> ID COLON TYPENAME .)
    LBRACKET        shift and go to state 47


state 21

    (22) local -> function SEMI .

    BEGIN           reduce using rule 22 (local -> function SEMI .)
    ID              reduce using rule 22 (local -> function SEMI .)
    FUNC            reduce using rule 22 (local -> function SEMI .)


state 22

    (27) function -> FUNC ID LPAREN parameters RPAREN BEGIN statements . END SEMI
    (28) function -> FUNC ID LPAREN parameters RPAREN BEGIN statements . END
    (5) statements -> statements . SEMI statement
    (6) statements -> statements . statement
    (3) statement -> . BEGIN statements END
    (7) statement -> . assign
    (8) statement -> . print
    (9) statement -> . if
    (10) statement -> . if_else
    (11) statement -> . while
    (12) statement -> . BREAK
    (13) statement -> . SKIP
    (14) statement -> . read
    (15) statement -> . write
    (16) statement -> . funcall
    (17) statement -> . return
    (39) assign -> . location ASSIGN expression
    (40) print -> . PRINT LPAREN literals RPAREN
    (34) if -> . IF cond THEN statement
    (36) if -> . IF cond statement
    (35) if_else -> . IF cond THEN statement ELSE statement
    (37) if_else -> . IF cond statement ELSE statement
    (38) while -> . WHILE cond DO statement
    (43) read -> . READ LPAREN location RPAREN
    (41) write -> . WRITE LPAREN expression RPAREN
    (44) funcall -> . ID LPAREN exprlist RPAREN
    (42) return -> . RETURN expression
    (73) location -> . ID
    (74) location -> . ID LBRACKET expression RBRACKET

    END             shift and go to state 48
    SEMI            shift and go to state 50
    BEGIN           shift and go to state 28
    BREAK           shift and go to state 40
    SKIP            shift and go to state 35
    PRINT           shift and go to state 26
    IF              shift and go to state 38
    WHILE           shift and go to state 25
    READ            shift and go to state 23
    WRITE           shift and go to state 36
    ID              shift and go to state 37
    RETURN          shift and go to state 39

    funcall                        shift and go to state 24
    read                           shift and go to state 34
    return                         shift and go to state 33
    write                          shift and go to state 29
    while                          shift and go to state 41
    location                       shift and go to state 30
    statement                      shift and go to state 49
    print                          shift and go to state 32
    if_else                        shift and go to state 42
    assign                         shift and go to state 43
    if                             shift and go to state 27

state 23

    (43) read -> READ . LPAREN location RPAREN

    LPAREN          shift and go to state 51


state 24

    (16) statement -> funcall .

    ELSE            reduce using rule 16 (statement -> funcall .)
    END             reduce using rule 16 (statement -> funcall .)
    SEMI            reduce using rule 16 (statement -> funcall .)
    BEGIN           reduce using rule 16 (statement -> funcall .)
    BREAK           reduce using rule 16 (statement -> funcall .)
    SKIP            reduce using rule 16 (statement -> funcall .)
    PRINT           reduce using rule 16 (statement -> funcall .)
    IF              reduce using rule 16 (statement -> funcall .)
    WHILE           reduce using rule 16 (statement -> funcall .)
    READ            reduce using rule 16 (statement -> funcall .)
    WRITE           reduce using rule 16 (statement -> funcall .)
    ID              reduce using rule 16 (statement -> funcall .)
    RETURN          reduce using rule 16 (statement -> funcall .)


state 25

    (38) while -> WHILE . cond DO statement
    (53) cond -> . expression LT expression
    (54) cond -> . expression GT expression
    (55) cond -> . expression LE expression
    (56) cond -> . expression GE expression
    (57) cond -> . expression EQ expression
    (58) cond -> . expression NE expression
    (59) cond -> . cond LAND cond
    (60) cond -> . cond LOR cond
    (61) cond -> . LNOT cond
    (62) cond -> . LPAREN cond RPAREN
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . funcall
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (63) expression -> . location
    (64) expression -> . literal
    (65) expression -> . TYPENAME LPAREN expression RPAREN
    (44) funcall -> . ID LPAREN exprlist RPAREN
    (73) location -> . ID
    (74) location -> . ID LBRACKET expression RBRACKET
    (70) literal -> . INTEGER
    (71) literal -> . FLOAT

    LNOT            shift and go to state 52
    LPAREN          shift and go to state 60
    PLUS            shift and go to state 56
    MINUS           shift and go to state 55
    TYPENAME        shift and go to state 62
    ID              shift and go to state 37
    INTEGER         shift and go to state 58
    FLOAT           shift and go to state 61

    funcall                        shift and go to state 53
    literal                        shift and go to state 59
    cond                           shift and go to state 54
    location                       shift and go to state 57
    expression                     shift and go to state 63

state 26

    (40) print -> PRINT . LPAREN literals RPAREN

    LPAREN          shift and go to state 64


state 27

    (9) statement -> if .

    ELSE            reduce using rule 9 (statement -> if .)
    END             reduce using rule 9 (statement -> if .)
    SEMI            reduce using rule 9 (statement -> if .)
    BEGIN           reduce using rule 9 (statement -> if .)
    BREAK           reduce using rule 9 (statement -> if .)
    SKIP            reduce using rule 9 (statement -> if .)
    PRINT           reduce using rule 9 (statement -> if .)
    IF              reduce using rule 9 (statement -> if .)
    WHILE           reduce using rule 9 (statement -> if .)
    READ            reduce using rule 9 (statement -> if .)
    WRITE           reduce using rule 9 (statement -> if .)
    ID              reduce using rule 9 (statement -> if .)
    RETURN          reduce using rule 9 (statement -> if .)


state 28

    (3) statement -> BEGIN . statements END
    (4) statements -> . statement
    (5) statements -> . statements SEMI statement
    (6) statements -> . statements statement
    (3) statement -> . BEGIN statements END
    (7) statement -> . assign
    (8) statement -> . print
    (9) statement -> . if
    (10) statement -> . if_else
    (11) statement -> . while
    (12) statement -> . BREAK
    (13) statement -> . SKIP
    (14) statement -> . read
    (15) statement -> . write
    (16) statement -> . funcall
    (17) statement -> . return
    (39) assign -> . location ASSIGN expression
    (40) print -> . PRINT LPAREN literals RPAREN
    (34) if -> . IF cond THEN statement
    (36) if -> . IF cond statement
    (35) if_else -> . IF cond THEN statement ELSE statement
    (37) if_else -> . IF cond statement ELSE statement
    (38) while -> . WHILE cond DO statement
    (43) read -> . READ LPAREN location RPAREN
    (41) write -> . WRITE LPAREN expression RPAREN
    (44) funcall -> . ID LPAREN exprlist RPAREN
    (42) return -> . RETURN expression
    (73) location -> . ID
    (74) location -> . ID LBRACKET expression RBRACKET

    BEGIN           shift and go to state 28
    BREAK           shift and go to state 40
    SKIP            shift and go to state 35
    PRINT           shift and go to state 26
    IF              shift and go to state 38
    WHILE           shift and go to state 25
    READ            shift and go to state 23
    WRITE           shift and go to state 36
    ID              shift and go to state 37
    RETURN          shift and go to state 39

    funcall                        shift and go to state 24
    if_else                        shift and go to state 42
    read                           shift and go to state 34
    return                         shift and go to state 33
    write                          shift and go to state 29
    while                          shift and go to state 41
    location                       shift and go to state 30
    statement                      shift and go to state 31
    print                          shift and go to state 32
    statements                     shift and go to state 65
    assign                         shift and go to state 43
    if                             shift and go to state 27

state 29

    (15) statement -> write .

    ELSE            reduce using rule 15 (statement -> write .)
    END             reduce using rule 15 (statement -> write .)
    SEMI            reduce using rule 15 (statement -> write .)
    BEGIN           reduce using rule 15 (statement -> write .)
    BREAK           reduce using rule 15 (statement -> write .)
    SKIP            reduce using rule 15 (statement -> write .)
    PRINT           reduce using rule 15 (statement -> write .)
    IF              reduce using rule 15 (statement -> write .)
    WHILE           reduce using rule 15 (statement -> write .)
    READ            reduce using rule 15 (statement -> write .)
    WRITE           reduce using rule 15 (statement -> write .)
    ID              reduce using rule 15 (statement -> write .)
    RETURN          reduce using rule 15 (statement -> write .)


state 30

    (39) assign -> location . ASSIGN expression
